--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "git@github.com:Blummer92/amplify-app.git",
   "name": "amplifyapp",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "amplify-app -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
